crates/library/src/snapshots/library__history__tests__append_writes_one_json_line.snap
---
source: crates/library/src/history.rs
expression: contents
---
{"path":"/music/song.flac","title":"Song","artist":"Artist","ts":1700000000}
