crates/library/src/snapshots/library__history__tests__load_returns_appended_entries_newest_first.snap
---
source: crates/library/src/history.rs
assertion_line: 126
expression: entries
---
[
    HistoryEntry {
        track_source: Local(
            "/music/second.flac",
        ),
        title: "Second",
        artist: None,
        played_at: Moment(
            2000s,
        ),
    },
    HistoryEntry {
        track_source: Local(
            "/music/first.flac",
        ),
        title: "First",
        artist: Some(
            "Artist A",
        ),
        played_at: Moment(
            1000s,
        ),
    },
]
