crates/library/src/snapshots/library__history__tests__parse_history_skips_a_corrupt_line_and_reverses_the_rest.snap
---
source: crates/library/src/history.rs
expression: "parse_history(HISTORY_LOG, 10)"
---
[
    HistoryEntry {
        path: "/music/third.flac",
        title: "Third",
        artist: None,
        at: 7000,
    },
    HistoryEntry {
        path: "/music/also-good.flac",
        title: "Also Good",
        artist: Some(
            "Artist",
        ),
        at: 6000,
    },
    HistoryEntry {
        path: "/music/good.flac",
        title: "Good",
        artist: None,
        at: 5000,
    },
]
