crates/library/src/snapshots/library__history__tests__read_round_trips_appended_entries_newest_first.snap
---
source: crates/library/src/history.rs
assertion_line: 137
expression: read.entries
---
[
    HistoryEntry {
        path: "/music/second.flac",
        title: "Second",
        artist: None,
        at: UnixSeconds(
            2000,
        ),
    },
    HistoryEntry {
        path: "/music/first.flac",
        title: "First",
        artist: Some(
            "Artist A",
        ),
        at: UnixSeconds(
            1000,
        ),
    },
]
